<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".IntroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/tv_app_name_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/intro_screen_title_text_marginTop"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/intro_screen_title_text_size"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="377dp"
            android:layout_height="191dp"
            android:layout_marginTop="@dimen/intro_screen_image_marginTop"
            android:contentDescription="@string/image_content_description"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lets_get_started_text_marginTop"
            android:text="@string/lets_get_started_text"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/lets_get_started_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/intro_text_marginStartEnd"
            android:layout_marginTop="@dimen/intro_text_marginTop"
            android:layout_marginEnd="@dimen/intro_text_marginStartEnd"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/intro_text_line_spacing_extra"
            android:text="@string/intro_text_description"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/intro_text_size" />

        <Button
            android:id="@+id/btn_sign_in_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/btn_marginStartEnd"
            android:layout_marginTop="@dimen/intro_screen_sign_in_btn_marginTop"
            android:layout_marginEnd="@dimen/btn_marginStartEnd"
            android:background="@drawable/shape_button_rounded"
            android:gravity="center"
            android:paddingTop="@dimen/btn_paddingTopBottom"
            android:paddingBottom="@dimen/btn_paddingTopBottom"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/btn_sign_up_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/btn_marginStartEnd"
            android:layout_marginTop="@dimen/intro_screen_sign_up_btn_marginTop"
            android:layout_marginEnd="@dimen/btn_marginStartEnd"
            android:background="@drawable/shape_button_rounded_white"
            android:gravity="center"
            android:paddingTop="@dimen/btn_paddingTopBottom"
            android:paddingBottom="@dimen/btn_paddingTopBottom"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="@dimen/btn_text_size" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>